# scratch-llm

./: .gitignore  GEMINI.md  README.md  TODO.md  config.py  eval_model.py  flake.nix  inspect_dataset.py  inspect_thresholds.py  main.py  pyproject.toml  test_tokenizer.py
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 25li50sfrj7cbl344gddmkva1h4fpri0-source
data/: dataset.py  preprocess.py
model/: attention.py  block.py  lm.py
tests/: test_dataset.py  test_eval.py  test_model.py  test_preprocess.py  test_trainer.py
train/: checkpoint.py  trainer.py
