[project]
name = "scratch-llm"
version = "0.1.0"
description = "Korean 100M LLM from Scratch"
requires-python = "==3.11.*"
dependencies = [
    "torch",
    "transformers",
    "datasets",
    "tokenizers",
    "pytest",
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
